# AstroBox-NG-Module-AppWasm

./: Cargo.toml  README.md  build.rs  rust-analyzer.toml
src/: lib.rs
src/frontapi/: device.rs  miwear.rs  mod.rs
src/frontapi/device/: thirdparty_app.rs  watchface.rs
src/frontapi/miwear/: thirdparty_app.rs  watchface.rs
src/spp/: xiaomi.rs
