[package]
name = "astrobox-ng-wasm"
version = "2.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
web-time = "1"
log = "0.4"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time", "sync", "io-util"] }

web-sys = { version = "0.3", features = [
  "Window", "Navigator", "EventTarget", "console",

  "Serial", "SerialPort", "SerialOptions", "SerialPortInfo",
  "SerialPortRequestOptions", "SerialOutputSignals",

  "ReadableStream", "ReadableStreamDefaultReader",
  "WritableStream", "WritableStreamDefaultWriter",
  "TextDecoder", "TextEncoder"
] }

async-channel = "2.5.0"
corelib = { path = "../core" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
