[package]
name = "astrobox-ng-wasm"
version = "2.0.0"
edition = "2024"
build = "../../../src-tauri/modules/app_wasm/build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
web-time = "1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time", "sync", "io-util"] }

web-sys = { version = "0.3", features = [
  "Window", "Navigator", "EventTarget", "console",

  "Serial", "SerialPort", "SerialOptions", "SerialPortInfo",
  "SerialPortRequestOptions", "SerialOutputSignals",

  "Bluetooth", "BluetoothDevice", "BluetoothRemoteGattServer",
  "BluetoothRemoteGattService", "BluetoothRemoteGattCharacteristic",

  "ReadableStream", "ReadableStreamDefaultReader",
  "WritableStream", "WritableStreamDefaultWriter",
  "TextDecoder", "TextEncoder"
] }

async-channel = "2.5.0"
corelib = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
once_cell = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
